# eth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-crates.toml  spec-lock.toml
crates/eth/: Cargo.toml  README.md
crates/eth-evm/: Cargo.toml
crates/eth-evm/src/: lib.rs
crates/eth-protocol/: Cargo.toml
crates/eth-protocol/src/: lib.rs
crates/eth-rpc/: Cargo.toml
crates/eth-signer/: Cargo.toml
crates/eth-signer/src/: lib.rs
crates/eth-valkyoth-codec/: Cargo.toml  README.md
crates/eth-valkyoth-codec/examples/: decode_session_benchmark.rs
crates/eth-valkyoth-codec/src/: budget.rs  error.rs  exact.rs  lib.rs  rlp.rs  session.rs  session_tests.rs
crates/eth-valkyoth-codec/src/rlp/: encode.rs  integer.rs  list.rs  tests.rs  traits.rs
crates/eth-valkyoth-codec/src/session/: charges.rs  policy.rs
crates/eth-valkyoth-codec/tests/: differential_rlp_reference.rs  execution_rlp_fixtures.rs
crates/eth-valkyoth-derive/: Cargo.toml  README.md
crates/eth-valkyoth-derive/src/: lib.rs  rlp.rs  rlp_tests.rs
crates/eth-valkyoth-derive/tests/: rlp_derive.rs
crates/eth-valkyoth-derive/tests/ui/: rlp_enum.rs  rlp_enum.stderr  rlp_generic.rs  rlp_generic.stderr  rlp_skip_without_reason.rs  rlp_skip_without_reason.stderr
crates/eth-valkyoth-evm/: Cargo.toml  README.md
crates/eth-valkyoth-evm-core/: Cargo.toml  README.md
crates/eth-valkyoth-evm-core/src/: advanced_precompile.rs  blake2f.rs  blake2f_tests.rs  bls12_frame.rs  bls12_gas.rs  bls12_gas_tests.rs  bls12_wire.rs  bls12_wire_tests.rs  bn254.rs  bn254_field.rs  bn254_final.rs  bn254_g2.rs  bn254_g2_tests.rs  bn254_line.rs  bn254_line_tests.rs  bn254_miller.rs  bn254_miller_tests.rs  bn254_pairing.rs  bn254_pairing_tests.rs  bn254_pairing_vector_tests.rs  bn254_tests.rs  bn254_tower.rs  bn254_tower_tests.rs  bytecode.rs  call.rs  call_tests.rs  ecrecover.rs  ecrecover_tests.rs  error.rs  execution.rs  execution_lifecycle.rs  execution_security_tests.rs  execution_semantics_tests.rs  fork.rs  gas.rs  hash_precompile.rs  historical_gas_tests.rs  jumpdest.rs  lib.rs  memory.rs  (+21 more)
crates/eth-valkyoth-evm-core/src/testdata/: eip2537_g1_discounts.txt  eip2537_g2_discounts.txt
crates/eth-valkyoth-evm/src/: environment.rs  gas_estimation.rs  lib.rs  result.rs  snapshot.rs  tests.rs
crates/eth-valkyoth-hash/: Cargo.toml  README.md
crates/eth-valkyoth-hash/src/: lib.rs
crates/eth-valkyoth-primitives/: Cargo.toml  README.md
crates/eth-valkyoth-primitives/src/: lib.rs  rlp.rs  rlp_traits.rs  tests.rs
crates/eth-valkyoth-protocol/: Cargo.toml  README.md
crates/eth-valkyoth-protocol/src/: eip2718.rs  fork.rs  fork_tests.rs  header.rs  header_tests.rs  lib.rs  receipt.rs  receipt_tests.rs  state.rs  state_tests.rs  transaction.rs  withdrawal.rs  withdrawal_tests.rs
crates/eth-valkyoth-reth/: Cargo.toml  README.md
crates/eth-valkyoth-rpc/: Cargo.toml  README.md
crates/eth-valkyoth-rpc/src/: lib.rs
crates/eth-valkyoth-sanitization/: Cargo.toml  README.md
crates/eth-valkyoth-sanitization/src/: lib.rs
crates/eth-valkyoth-sanitization/tests/: basic.rs  derive.rs
crates/eth-valkyoth-signer/: Cargo.toml  README.md
crates/eth-valkyoth-signer/src/: lib.rs
crates/eth-valkyoth-testkit/: Cargo.toml  README.md
crates/eth-valkyoth-verify/: Cargo.toml  README.md
crates/eth-valkyoth-verify/src/: eip712.rs  eip712_json.rs  eip712_json_dom.rs  eip712_json_scalar.rs  eip712_json_tests.rs  eip712_limits.rs  eip712_limits_tests.rs  eip712_schema.rs  eip712_security_tests.rs  eip712_type_graph.rs  eip712_typed.rs  eip712_typed_helpers.rs  eip712_typed_tests.rs  eip712_value_encode.rs  lib.rs  mpt.rs  mpt_proof.rs  mpt_proof_budget_tests.rs  mpt_proof_tests.rs  mpt_tests.rs  replay.rs  sender.rs  sender_tests.rs  set_code_authorization.rs  state_proof.rs  state_proof_tests.rs  test_crypto.rs  transaction_hash.rs  transaction_signature.rs  transaction_signature_external_tests.rs  transaction_signature_helpers.rs  transaction_signature_set_code.rs  transaction_signature_tests.rs
crates/eth-verify/: Cargo.toml
crates/eth-verify/src/: lib.rs
crates/eth/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: advanced_precompile_plan.rs  blake2f_frame.rs  bls12381_wire.rs  bn254_frame.rs  bn254_pairing_frame.rs  decode_limits.rs  ecrecover_frame.rs  eip712_json.rs  eip712_typed.rs  ethereum_signature.rs  header.rs  modexp_frame.rs  mpt_node.rs  mpt_proof.rs  primitives.rs  receipt.rs  rlp.rs  rlp_differential.rs  rlp_encode.rs  rlp_integer.rs  rlp_list.rs  rlp_scalar.rs  set_code_authorization_signature.rs  transaction_envelope.rs  truncated_push.rs  withdrawal.rs
fuzz/seed-corpus/: README.md
fuzz/seed-corpus/bls12381_wire/: map-fp-zero.hex
fuzz/seed-corpus/decode_limits/: small-count.hex
fuzz/seed-corpus/eip712_json/: deep-json-edge.hex  duplicate-field.hex  duplicate-type-key.hex  ether-mail.hex  fixed-array-mismatch.hex  malformed-hex.hex  missing-primary-type.hex  wide-array-edge.hex  wide-object-edge.hex  zero-chain-id.hex
fuzz/seed-corpus/ethereum_signature/: k256-doc-vector.hex
fuzz/seed-corpus/mpt_node/: bad-path-flag.hex  branch-empty.hex  extension-hash.hex  inline-leaf.hex  inline-too-large.hex  leaf-empty-path.hex  short-reference.hex  wrong-field-count.hex
fuzz/seed-corpus/mpt_proof/: empty-proof.hex  leaf-like-proof.hex
fuzz/seed-corpus/primitives/: address-20.hex  b256-32.hex
fuzz/seed-corpus/rlp/: list-cat-dog.hex  nested-official.hex
fuzz/seed-corpus/rlp_differential/: noncanonical-single-byte.hex  short-scalar.hex
fuzz/seed-corpus/rlp_encode/: long-payload-56.hex
fuzz/seed-corpus/rlp_integer/: u64-max.hex
fuzz/seed-corpus/rlp_list/: depth-128-empty-list-chain.hex
fuzz/seed-corpus/set_code_authorization_signature/: basic-authority.hex
fuzz/seed-corpus/transaction_envelope/: legacy-trailing.hex  set-code-empty-auth.hex  set-code-malformed-auth.hex  set-code-max-auth-list.hex  typed-2-opaque-list.hex
fuzz/seed-corpus/withdrawal/: noncanonical-index.hex  one-valid-entry.hex  oversized-address.hex  wrong-field-count.hex  zero-amount.hex
(+352 files in other folders)
