[workspace]
members = [
    "crates/eth",
    "crates/eth-valkyoth-codec",
    "crates/eth-valkyoth-evm",
    "crates/eth-valkyoth-primitives",
    "crates/eth-valkyoth-protocol",
    "crates/eth-valkyoth-derive",
    "crates/eth-valkyoth-reth",
    "crates/eth-valkyoth-rpc",
    "crates/eth-valkyoth-sanitization",
    "crates/eth-valkyoth-signer",
    "crates/eth-valkyoth-testkit",
    "crates/eth-valkyoth-verify",
]
default-members = ["crates/eth"]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/valkyoth/eth"
repository = "https://github.com/valkyoth/eth"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[workspace.dependencies]
eth-valkyoth-codec = { path = "crates/eth-valkyoth-codec", version = "0.9.0" }
eth-valkyoth-derive = { path = "crates/eth-valkyoth-derive", version = "0.7.0" }
eth-valkyoth-evm = { path = "crates/eth-valkyoth-evm", version = "0.7.0" }
eth-valkyoth-primitives = { path = "crates/eth-valkyoth-primitives", version = "0.8.0" }
eth-valkyoth-protocol = { path = "crates/eth-valkyoth-protocol", version = "0.7.0" }
eth-valkyoth-reth = { path = "crates/eth-valkyoth-reth", version = "0.7.0" }
eth-valkyoth-rpc = { path = "crates/eth-valkyoth-rpc", version = "0.7.0" }
eth-valkyoth-sanitization = { path = "crates/eth-valkyoth-sanitization", version = "0.7.0" }
eth-valkyoth-signer = { path = "crates/eth-valkyoth-signer", version = "0.7.0" }
eth-valkyoth-testkit = { path = "crates/eth-valkyoth-testkit", version = "0.7.0" }
eth-valkyoth-verify = { path = "crates/eth-valkyoth-verify", version = "0.7.0" }
proc-macro2 = "1.0.106"
quote = "1.0.46"
sanitization = { version = "1.2.2", default-features = false }
subtle = { version = "2.6.1", default-features = false, features = ["core_hint_black_box"] }
syn = { version = "2.0.118", features = ["full"] }

[profile.release]
overflow-checks = true
panic = "abort"
