[package]
name = "eth-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
eth-valkyoth-codec = { path = "../crates/eth-valkyoth-codec", version = "0.8.0", features = ["testing"] }
libfuzzer-sys = "0.4.13"

[[bin]]
name = "decode_limits"
path = "fuzz_targets/decode_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_scalar"
path = "fuzz_targets/rlp_scalar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_list"
path = "fuzz_targets/rlp_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_integer"
path = "fuzz_targets/rlp_integer.rs"
test = false
doc = false
bench = false
