[package]
name = "eth-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
eth-valkyoth-codec = { path = "../crates/eth-valkyoth-codec", version = "0.16.0", features = ["testing"] }
eth-valkyoth-hash = { path = "../crates/eth-valkyoth-hash", version = "0.10.0" }
eth-valkyoth-primitives = { path = "../crates/eth-valkyoth-primitives", version = "0.10.1" }
eth-valkyoth-protocol = { path = "../crates/eth-valkyoth-protocol", version = "0.19.0" }
eth-valkyoth-verify = { path = "../crates/eth-valkyoth-verify", version = "0.11.0" }
libfuzzer-sys = "0.4.13"

[[bin]]
name = "rlp"
path = "fuzz_targets/rlp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_limits"
path = "fuzz_targets/decode_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_scalar"
path = "fuzz_targets/rlp_scalar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_list"
path = "fuzz_targets/rlp_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_integer"
path = "fuzz_targets/rlp_integer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_encode"
path = "fuzz_targets/rlp_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "primitives"
path = "fuzz_targets/primitives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transaction_envelope"
path = "fuzz_targets/transaction_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ethereum_signature"
path = "fuzz_targets/ethereum_signature.rs"
test = false
doc = false
bench = false
