[package]
name = "eth-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
alloy-rlp = "0.3.16"
eth-valkyoth-codec = { path = "../crates/eth-valkyoth-codec", version = "0.19.0", features = ["testing"] }
eth-valkyoth-evm-core = { path = "../crates/eth-valkyoth-evm-core", version = "0.21.0", features = ["testing"] }
eth-valkyoth-hash = { path = "../crates/eth-valkyoth-hash", version = "0.11.2", features = ["tiny-keccak"] }
eth-valkyoth-primitives = { path = "../crates/eth-valkyoth-primitives", version = "0.11.2" }
eth-valkyoth-protocol = { path = "../crates/eth-valkyoth-protocol", version = "0.25.2" }
eth-valkyoth-verify = { path = "../crates/eth-valkyoth-verify", version = "0.21.0", features = ["json", "secp256k1-k256"] }
libfuzzer-sys = "0.4.13"

[[bin]]
name = "rlp"
path = "fuzz_targets/rlp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_limits"
path = "fuzz_targets/decode_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_scalar"
path = "fuzz_targets/rlp_scalar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_list"
path = "fuzz_targets/rlp_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_integer"
path = "fuzz_targets/rlp_integer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_encode"
path = "fuzz_targets/rlp_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rlp_differential"
path = "fuzz_targets/rlp_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "primitives"
path = "fuzz_targets/primitives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transaction_envelope"
path = "fuzz_targets/transaction_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header"
path = "fuzz_targets/header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt"
path = "fuzz_targets/receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "withdrawal"
path = "fuzz_targets/withdrawal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mpt_node"
path = "fuzz_targets/mpt_node.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mpt_proof"
path = "fuzz_targets/mpt_proof.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ethereum_signature"
path = "fuzz_targets/ethereum_signature.rs"
test = false
doc = false
bench = false

[[bin]]
name = "set_code_authorization_signature"
path = "fuzz_targets/set_code_authorization_signature.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eip712_typed"
path = "fuzz_targets/eip712_typed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eip712_json"
path = "fuzz_targets/eip712_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ecrecover_frame"
path = "fuzz_targets/ecrecover_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "modexp_frame"
path = "fuzz_targets/modexp_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bn254_frame"
path = "fuzz_targets/bn254_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bn254_pairing_frame"
path = "fuzz_targets/bn254_pairing_frame.rs"
test = false
doc = false
bench = false
