[package]
name = "eth-evm"
description = "Future REVM adapter boundary for eth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = []

[lints]
workspace = true
