[package]
name = "eth-protocol"
description = "Fork-aware no_std Ethereum protocol validation state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = ["eth-primitives/std"]

[dependencies]
eth-primitives.workspace = true

[lints]
workspace = true
