[package]
name = "eth-valkyoth-codec"
description = "Bounded no_std Ethereum wire codec policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = []

[lints]
workspace = true
