[package]
name = "eth-valkyoth-codec"
description = "Bounded no_std Ethereum wire codec policy."
version = "0.16.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []
testing = []

[lints]
workspace = true
