[package]
name = "eth-valkyoth-codec"
description = "Bounded no_std Ethereum wire codec policy."
version = "0.21.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []
testing = []

[dev-dependencies]
alloy-rlp.workspace = true
serde_json.workspace = true

[lints]
workspace = true
