[package]
name = "eth-valkyoth-derive"
description = "Optional sanitization and RLP derive macros for eth."
version = "0.17.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
eth-valkyoth-codec.workspace = true
eth-valkyoth-primitives.workspace = true
trybuild.workspace = true

[lints]
workspace = true
