[package]
name = "eth-valkyoth-evm"
description = "Explicit no_std EVM execution boundary for eth."
version = "0.10.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []

[dependencies]
eth-valkyoth-codec.workspace = true
eth-valkyoth-primitives.workspace = true
eth-valkyoth-protocol.workspace = true

[lints]
workspace = true
