[package]
name = "eth-valkyoth-primitives"
description = "Core no_std Ethereum protocol primitives."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []

[dependencies]
subtle.workspace = true

[lints]
workspace = true
