[package]
name = "eth-valkyoth-primitives"
description = "Core no_std Ethereum protocol primitives."
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = ["eth-valkyoth-codec/std"]

[dependencies]
eth-valkyoth-codec.workspace = true
subtle.workspace = true

[dev-dependencies]
eth-valkyoth-codec = { workspace = true, features = ["testing"] }

[lints]
workspace = true
