[package]
name = "eth-valkyoth-protocol"
description = "Fork-aware no_std Ethereum protocol validation state."
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = ["eth-valkyoth-primitives/std"]

[dependencies]
eth-valkyoth-primitives.workspace = true

[lints]
workspace = true
