[package]
name = "eth-valkyoth-reth"
description = "Future Reth integration boundary for eth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = []

[lints]
workspace = true
