[package]
name = "eth-valkyoth-rpc"
description = "Future RPC trust-policy boundary for eth."
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []

[lints]
workspace = true
