[package]
name = "eth-valkyoth-signer"
description = "Future signer isolation boundary for eth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = ["eth-valkyoth-primitives/std"]

[dependencies]
eth-valkyoth-primitives.workspace = true

[lints]
workspace = true
