[package]
name = "eth-valkyoth-testkit"
description = "Testing helpers and future Ethereum conformance fixtures for eth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
std = []

[lints]
workspace = true
