[package]
name = "eth-valkyoth-testkit"
description = "Testing helpers and future Ethereum conformance fixtures for eth."
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = []

[lints]
workspace = true
