[package]
name = "eth-valkyoth-verify"
description = "no_std Ethereum verification boundaries."
version = "0.14.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = [
    "eth-valkyoth-hash/std",
    "eth-valkyoth-primitives/std",
    "eth-valkyoth-protocol/std",
]

[dependencies]
eth-valkyoth-codec.workspace = true
eth-valkyoth-hash.workspace = true
eth-valkyoth-primitives.workspace = true
eth-valkyoth-protocol.workspace = true
k256.workspace = true

[dev-dependencies]
sha3.workspace = true

[lints]
workspace = true
