[package]
name = "eth"
description = "no_std-first Ethereum execution-layer protocol toolkit facade."
version = "0.25.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
std = [
    "eth-valkyoth-codec/std",
    "eth-valkyoth-hash/std",
    "eth-valkyoth-primitives/std",
    "eth-valkyoth-protocol/std",
    "eth-valkyoth-verify/std",
]
evm = ["dep:eth-valkyoth-evm"]
rpc = ["dep:eth-valkyoth-rpc"]
sanitization = ["dep:eth-valkyoth-sanitization"]
signer = ["dep:eth-valkyoth-signer"]
reth = ["dep:eth-valkyoth-reth"]
testkit = ["dep:eth-valkyoth-testkit"]

[dependencies]
eth-valkyoth-codec.workspace = true
eth-valkyoth-hash.workspace = true
eth-valkyoth-primitives.workspace = true
eth-valkyoth-protocol.workspace = true
eth-valkyoth-verify.workspace = true
eth-valkyoth-evm = { workspace = true, optional = true }
eth-valkyoth-reth = { workspace = true, optional = true }
eth-valkyoth-rpc = { workspace = true, optional = true }
eth-valkyoth-sanitization = { workspace = true, optional = true }
eth-valkyoth-signer = { workspace = true, optional = true }
eth-valkyoth-testkit = { workspace = true, optional = true }

[lints]
workspace = true
